tests/compile_fail/borrow/forward_generic.rs
#[derive(derive_more::Borrow)]
#[borrow(forward)]
struct Foo<T>(T);

fn main() {}
